<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_NiteFoodie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btn_MyAccount"
            android:layout_alignRight="@+id/btn_MyAccount"
            android:layout_below="@+id/btn_MyAccount"
            android:background="@drawable/btn_background1"
            android:text="@string/btn_NiteFoodie"
            android:textColor="@drawable/btn_color1" />

        <Button
            android:id="@+id/btn_OrderNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btn_NiteFoodie"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/btn_NiteFoodie"
            android:layout_marginBottom="31dp"
            android:background="@drawable/btn_background2"
            android:height="80dp"
            android:text="@string/btn_OrderNow"
            android:textColor="@drawable/btn_color2"
            android:textSize="@dimen/BIG" />

        <Button
            android:id="@+id/btn_MyAccount"  
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btn_LocationAndHours"
            android:layout_alignRight="@+id/btn_LocationAndHours"
            android:layout_centerVertical="true"
            android:layout_marginBottom="4dp"
            android:background="@drawable/btn_background1"
            android:text="@string/btn_MyAccount"
            android:textColor="@drawable/btn_color1" />

        <Button
            android:id="@+id/btn_LocationAndHours"  
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_MyAccount"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="4dp"
            android:background="@drawable/btn_background1"
            android:text="@string/btn_LocationAndHours"
            android:textColor="@drawable/btn_color1" />

        

        <ImageButton
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btn_MyAccount"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/btn_MyAccount"
            android:layout_alignTop="@+id/img_logo"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/desc_logo"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_logo" />

        <TextView
            android:id="@+id/lbl_UserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_OrderNow"
            android:layout_centerHorizontal="true"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

</ScrollView>