<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="4dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="4dp"
            android:background="#8d9190"
             >

            <TextView
                android:id="@+id/lbl_Item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="My Account"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#FFF" />
            
            <!--  android:background="#80000000" -->

            <Button
                android:id="@+id/btn_LogOut"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:padding="6dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/btn_background1"
                android:text="@string/lbl_LogOut"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFF" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp" >

            <LinearLayout
                android:id="@+id/layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#dfe0e2"
                android:orientation="vertical"
                android:paddingBottom="10dp" >

                <TextView
                    android:id="@+id/lbl_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#C0C0C0"
                    android:paddingBottom="2dp"
                    android:paddingLeft="10dp"
                    android:text="@string/lbl_Email"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/txt_Email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/txtbox_background"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="2dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_PhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/layout_email"
                android:layout_below="@+id/layout_email"
                android:layout_marginTop="10dp"
                android:background="#dfe0e2"
                android:orientation="vertical"
                android:paddingBottom="10dp" >

                <TextView
                    android:id="@+id/lbl_PhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#C0C0C0"
                    android:paddingBottom="2dp"
                    android:paddingLeft="10dp"
                    android:text="@string/lbl_PhoneNumber"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/txt_PhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/txtbox_background"
                    android:inputType="phone"
                    android:paddingLeft="2dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_DeliveryInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/layout_PhoneNumber"
                android:layout_below="@+id/layout_PhoneNumber"
                android:layout_marginTop="10dp"
                android:background="#dfe0e2"
                android:orientation="vertical"
                android:paddingBottom="10dp" >

                <TextView
                    android:id="@+id/lbl_DeliveryInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#C0C0C0"
                    android:paddingBottom="2dp"
                    android:paddingLeft="10dp"
                    android:text="@string/lbl_DeliveryInfo"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/lbl_StreetAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingBottom="2dp"
                    android:paddingLeft="10dp"
                    android:text="@string/lbl_StreetAddress"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/txt_StreetAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/txtbox_background"
                    android:inputType="textPostalAddress"
                    android:paddingLeft="2dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/lbl_UnitApt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingBottom="2dp"
                    android:paddingLeft="10dp"
                    android:text="@string/lbl_UnitApt"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/txt_UnitApt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/txtbox_background"
                    android:inputType="textPostalAddress"
                    android:paddingLeft="2dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/lbl_City"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingBottom="2dp"
                    android:paddingLeft="10dp"
                    android:text="@string/lbl_City"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/txt_City"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/txtbox_background"
                    android:ems="10"
                    android:inputType="textPostalAddress"
                    android:paddingLeft="2dp"
                    android:text="@string/txt_City"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/lbl_State"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingBottom="2dp"
                    android:paddingLeft="10dp"
                    android:text="@string/lbl_State"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/txt_State"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/txtbox_background"
                    android:inputType="textPostalAddress"
                    android:paddingLeft="2dp"
                    android:text="@string/txt_State"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/lbl_Pincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingBottom="2dp"
                    android:paddingLeft="10dp"
                    android:text="@string/lbl_Pincode"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/txt_Pincode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/txtbox_background"
                    android:inputType="number"
                    android:paddingLeft="2dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/btn_SaveInformation"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/btn_background1"
            android:minHeight="40dip"
            android:text="@string/btn_SaveInformation"
            android:textColor="@drawable/btn_color1" />

        <View
            android:id="@+id/line_invisible"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="5dp"
            android:background="#aaa"
            android:visibility="invisible" />
    </LinearLayout>

</ScrollView>