<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
 >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    >

      <LinearLayout
          android:id="@+id/layout_email_pass"
          android:layout_width="350dp"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          android:layout_alignRight="@+id/Line_RightHorizontal"
          android:layout_marginTop="30dp"
          android:background="#dfe0e2"
          android:orientation="vertical"
          android:paddingBottom="5dp"
          android:paddingLeft="5dp"
          android:paddingRight="10dp"
          android:paddingTop="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lbl_Email"
                android:layout_width="90dp"
                android:layout_height="wrap_content"  
                android:text="@string/lbl_Name"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <EditText
                android:id="@+id/txt_Email"
                android:layout_width="0dp"
                 android:layout_height="30dp"  
                android:layout_weight="1"
                android:background="@drawable/txtbox_background"
                android:inputType="textEmailAddress" />

        </LinearLayout>
        

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
          
           android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
           android:orientation="horizontal" >

            <TextView
                android:id="@+id/lbl_Password"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                
                android:text="@string/lbl_Password"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txt_Password"
                android:layout_width="0dp"
                android:layout_weight="1"
               android:layout_height="30dp" 
                
                android:background="@drawable/txtbox_background"
                android:inputType="textPassword" />

        </LinearLayout> 
        
    </LinearLayout>
    
    <Button
        android:id="@+id/btn_SignIn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_email_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_background1"
        android:minHeight="40dip"
        android:text="@string/btn_SignIn"
        android:textColor="@drawable/btn_color1" />

    <Button
        android:id="@+id/btn_SignUp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_SignIn"
        android:layout_below="@+id/lbl_Or"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_background1"
        android:minHeight="40dip"
        android:text="@string/btn_SignUp"
        android:textColor="@drawable/btn_color1" />

        <TextView
            android:id="@+id/lbl_Or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_SignIn"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"            
            android:text="@string/lbl_Or"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View
            android:id="@+id/line_LeftHorizonatl"
            android:layout_width="140dp"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:layout_alignTop="@+id/lbl_Or"
            android:layout_toLeftOf="@+id/lbl_Or"
            android:background="#aaa" />

        <View
            android:id="@+id/Line_RightHorizontal"
            android:layout_width="140dp"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:layout_alignTop="@+id/lbl_Or"
            android:layout_below="@+id/line_LeftHorizonatl"
            android:layout_toRightOf="@+id/lbl_Or"
            android:background="#aaa" />
    
</RelativeLayout>
</ScrollView>
