<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
   >

      <LinearLayout
          android:id="@+id/layout_email_pass"
          android:layout_width="350dp"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          
          android:layout_marginTop="30dp"
          android:background="#dfe0e2"
          android:orientation="vertical"
          android:paddingBottom="5dp"
          android:paddingLeft="5dp"
          android:paddingRight="10dp"
          android:paddingTop="5dp" >
          
          
         <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
          
           android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
           android:orientation="horizontal" >

            <TextView
                android:id="@+id/lbl_Name"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                
                android:text="@string/lbl_Name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txt_Name"
                android:layout_width="0dp"
                android:layout_weight="1"
               android:layout_height="30dp" 
                android:background="@drawable/txtbox_background"
               android:inputType="textPersonName"/>

        </LinearLayout>   

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lbl_Email"
                android:layout_width="90dp"
                android:layout_height="wrap_content"  
                android:text="@string/lbl_Email"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <EditText
                android:id="@+id/txt_Email"
                android:layout_width="0dp"
                 android:layout_height="30dp"  
                android:layout_weight="1"
                android:background="@drawable/txtbox_background"
                android:inputType="textEmailAddress" />

        </LinearLayout>
        

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
          
           android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
           android:orientation="horizontal" >

            <TextView
                android:id="@+id/lbl_Password"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                
                android:text="@string/lbl_Password"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txt_Password"
                android:layout_width="0dp"
                android:layout_weight="1"
               android:layout_height="30dp" 
                
                android:background="@drawable/txtbox_background"
                android:inputType="textPassword" />

        </LinearLayout> 
        
       
       
       
        
    </LinearLayout>

    <Button
        android:id="@+id/btn_Continue"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_email_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_background1"
        android:minHeight="40dip"
        android:text="@string/btn_Continue"
        android:textColor="@drawable/btn_color1" />
       
</RelativeLayout>
</ScrollView>
